KDRFC-Gateway/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kdrfc-gateway-rules
spec:
  hosts:
    - "*"
  gateways:
    - kdrfc-gateway
  http:
    - match:
        - uri:
            prefix: /api/accounts
      route:
        - destination:
            host: kdrfc-account
            port:
              number: 8081
    - match:
        - uri:
            prefix: /api/storage
      route:
        - destination:
            host: kdrfc-storage
            port:
              number: 8082
